force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Market Appraisal</fullName>
            </value>
            <value>
                <fullName>Viewing</fullName>
            </value>
            <value>
                <fullName>Instruction Appointment</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Check In</fullName>
            </value>
            <value>
                <fullName>Check Out</fullName>
            </value>
            <value>
                <fullName>EPC Survey</fullName>
            </value>
            <value>
                <fullName>Financial Services Appointment</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Property Inspection</fullName>
            </value>
            <value>
                <fullName>Property Launch</fullName>
            </value>
            <value>
                <fullName>Rent Review</fullName>
            </value>
            <value>
                <fullName>RICS Valuation</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
                <default>true</default>
                <label>Meeting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>