force-app/main/default/objects/Activity/fields/Average_Score_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Average_Score_Meeting__c</fullName>
    <formula>IF(
    Total_No_of_meeting__c = 0, 0,
   Total_No_of_meeting__c / MONTH(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>