force-app/main/default/objects/Activity/fields/Check_Activities__c.field-meta.xml
<CustomField>
    <fullName>Check_Activities__c</fullName>
    <formula>IF(
AND(
NOT( IsTask ),
OR( CONTAINS(Subject  , &apos;Showing&apos;) ,CONTAINS(Subject  , &apos;Meeting&apos;), CONTAINS(Subject  , &apos;meeting&apos;), CONTAINS(Subject  , &apos;showing&apos;) ) 
), 
true, 
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Activities</label>
    <type>Checkbox</type>
</CustomField>