force-app/main/default/objects/Activity/fields/ClientFeedback__c.field-meta.xml
<CustomField>
    <fullName>ClientFeedback__c</fullName>
    <label>Client Feedback</label>
    <type>TextArea</type>
</CustomField>