force-app/main/default/objects/Activity/fields/Comment_New__c.field-meta.xml
<CustomField>
    <fullName>Comment_New__c</fullName>
    <label>Comment(New)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>