force-app/main/default/objects/Activity/fields/Count_of__c.field-meta.xml
<CustomField>
    <fullName>Count_of__c</fullName>
    <formula>IF(
    ISPICKVAL(  Verified_Meeting__c , &quot;Meeting Verified&quot;) &amp;&amp; 
    NOT(ISBLANK(Subject)) &amp;&amp; 
    NOT(ISBLANK(ActivityDateTime)),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of CC verified Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>