force-app/main/default/objects/Activity/fields/DLRS_Assign_Profile__c.field-meta.xml
<CustomField>
    <fullName>DLRS_Assign_Profile__c</fullName>
    <formula>IF(
   AND( CONTAINS(Owner:User.Profile.Name, &quot;Call Center&quot;) , ISPICKVAL(Status,&apos;Completed&apos;) ), &quot;Call Center&quot;,
      IF(
         AND( CONTAINS(Owner:User.Profile.Name, &quot;Agent&quot;) , ISPICKVAL(Status,&apos;Completed&apos;) ), &quot;Agent&quot;,&quot;&quot; 
        )
)</formula>
    <label>DLRS Assign Profile</label>
    <type>Text</type>
</CustomField>