force-app/main/default/objects/Activity/fields/Do_you_want_to_create_Task_for_Agent__c.field-meta.xml
<CustomField>
    <fullName>Do_you_want_to_create_Task_for_Agent__c</fullName>
    <label>Do you want to create Task for Agent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>