force-app/main/default/objects/Activity/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Property Valuation</fullName>
            </value>
            <value>
                <fullName>Letting</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
                <isActive>false</isActive>
                <label>PDF</label>
            </value>
            <value>
                <fullName>Send For Sign</fullName>
                <isActive>false</isActive>
                <label>Send For Sign</label>
            </value>
            <value>
                <fullName>Word</fullName>
                <isActive>false</isActive>
                <label>Word</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>