force-app/main/default/objects/Activity/fields/eContacts__Bundle__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Bundle__c</fullName>
    <externalId>true</externalId>
    <label>Bundle</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>