force-app/main/default/objects/Activity/fields/Form_A_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Form_A_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form A Uploaded?</label>
    <type>Checkbox</type>
</CustomField>