force-app/main/default/objects/Activity/fields/Google_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Map_URL__c</fullName>
    <inlineHelpText>Please indicate the exact map location of the property.</inlineHelpText>
    <label>Google Map URL</label>
    <type>Url</type>
</CustomField>