force-app/main/default/objects/Activity/fields/Has_overlap__c.field-meta.xml
<CustomField>
    <fullName>Has_overlap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has overlap</label>
    <type>Checkbox</type>
</CustomField>