force-app/main/default/objects/Activity/fields/Include_EPC__c.field-meta.xml
<CustomField>
    <fullName>Include_EPC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include EPC</label>
    <type>Checkbox</type>
</CustomField>