force-app/main/default/objects/Activity/fields/Include_Floorplan__c.field-meta.xml
<CustomField>
    <fullName>Include_Floorplan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick if Floorplan needs to be requested.</inlineHelpText>
    <label>Include Floorplan</label>
    <type>Checkbox</type>
</CustomField>