force-app/main/default/objects/Activity/fields/Include_Photography__c.field-meta.xml
<CustomField>
    <fullName>Include_Photography__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Photography</label>
    <type>Checkbox</type>
</CustomField>