force-app/main/default/objects/Activity/fields/Include_Videoshoot__c.field-meta.xml
<CustomField>
    <fullName>Include_Videoshoot__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if video shoot is needed.</inlineHelpText>
    <label>Include Videoshoot</label>
    <type>Checkbox</type>
</CustomField>