force-app/main/default/objects/Activity/fields/Internal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comment__c</fullName>
    <label>Internal Comment</label>
    <type>TextArea</type>
</CustomField>