force-app/main/default/objects/Activity/fields/Listing_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Name__c</fullName>
    <formula>Listing__r.pba__ListingAgentName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Agent Name</label>
    <type>Text</type>
</CustomField>