force-app/main/default/objects/Activity/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <description>Filled by user when creating a follow-up action</description>
    <label>Next Action</label>
    <type>TextArea</type>
</CustomField>