force-app/main/default/objects/Activity/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <description>Used by quick action &quot;Close &amp; Follow-Up&quot;</description>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>