force-app/main/default/objects/Activity/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Inquiry_Value</valueSetName>
    </valueSet>
</CustomField>