force-app/main/default/objects/Activity/fields/pba__ActionPlanTask__c.field-meta.xml
<CustomField>
    <fullName>pba__ActionPlanTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup link to Action Plan Task</description>
    <label>Action Plan Task</label>
    <referenceTo>pba__ActionPlanTask__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>