force-app/main/default/objects/Activity/fields/pba__CallOutcome_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__CallOutcome_pb__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Contacted</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Bad #</fullName>
            </value>
            <value>
                <fullName>Has Agent</fullName>
            </value>
            <value>
                <fullName>Lost Opportunity</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Appt. Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>