force-app/main/default/objects/Activity/fields/pba__EmailDelivery__c.field-meta.xml
<CustomField>
    <fullName>pba__EmailDelivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Delivery</label>
    <referenceTo>pba__EmailDelivery__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>