force-app/main/default/objects/Activity/fields/pba__LeadRating_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__LeadRating_pb__c</fullName>
    <label>Lead Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>