force-app/main/default/objects/Activity/fields/pba__OverrideNextFollowUp_pb__c.field-meta.xml
<CustomField>
    <fullName>pba__OverrideNextFollowUp_pb__c</fullName>
    <label>Override Next Follow-Up Date</label>
    <type>Date</type>
</CustomField>