force-app/main/default/objects/Activity/fields/Property_Condition__c.field-meta.xml
<CustomField>
    <fullName>Property_Condition__c</fullName>
    <label>Property Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unmodernised</fullName>
            </value>
            <value>
                <fullName>Modernised</fullName>
            </value>
            <value>
                <fullName>New Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>