force-app/main/default/objects/Activity/fields/Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>Rating_Number__c</fullName>
    <formula>IF(TEXT(pba__Rating_pb__c) &lt;&gt; Null, VALUE(TEXT(pba__Rating_pb__c) ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>