force-app/main/default/objects/Activity/fields/RatingImage__c.field-meta.xml
<CustomField>
    <fullName>RatingImage__c</fullName>
    <formula>IF(
 $RecordType.DeveloperName = &quot;Showing&quot;,
CASE( TEXT(pba__Rating_pb__c),
&quot;1&quot;, IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;rating&quot;),
&quot;2&quot;, IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;rating&quot;),
&quot;3&quot;, IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;rating&quot;),
&quot;4&quot;, IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;rating&quot;),
&quot;5&quot;, IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;rating&quot;),
IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;rating&quot;)
)
,&quot;n/a&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***</label>
    <type>Text</type>
</CustomField>