force-app/main/default/objects/Activity/fields/Ratio__c.field-meta.xml
<CustomField>
    <fullName>Ratio__c</fullName>
    <formula>IF(
     Total_No_of_meeting__c = 0,
    &quot;N/A&quot;,
    TEXT( Count_of__c ) &amp; &quot;:&quot; &amp; TEXT(Total_No_of_meeting__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratio</label>
    <type>Text</type>
</CustomField>