force-app/main/default/objects/Activity/fields/Re_Shoot__c.field-meta.xml
<CustomField>
    <fullName>Re_Shoot__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if photo shoot is requested again for the same property.</inlineHelpText>
    <label>Re-Shoot</label>
    <type>Checkbox</type>
</CustomField>