force-app/main/default/objects/Activity/fields/Request_Document__c.field-meta.xml
<CustomField>
    <fullName>Request_Document__c</fullName>
    <label>Request Document</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Document_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Request_Document</valueSetName>
    </valueSet>
</CustomField>