force-app/main/default/objects/Activity/fields/Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin__c</fullName>
    <formula>MOD(VALUE( Task_Number__c ),3)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>