force-app/main/default/objects/Activity/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <inlineHelpText>INTERNALLY USED. DON&apos;T ADD THIS FIELD TO PAGEYLOUTS. This field will be populated from the description or client feedback field and can be included in related lists.</inlineHelpText>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>