force-app/main/default/objects/Activity/fields/Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Task Number</label>
    <type>AutoNumber</type>
</CustomField>