force-app/main/default/objects/Activity/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>WhatId</formula>
    <label>test Subject</label>
    <type>Text</type>
</CustomField>