force-app/main/default/objects/Activity/fields/Total_Actibity__c.field-meta.xml
<CustomField>
    <fullName>Total_Actibity__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Activity</label>
    <type>Text</type>
</CustomField>