force-app/main/default/objects/Activity/fields/Total_No_of_meeting__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_meeting__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Subject)),
        NOT(ISBLANK( ActivityDateTime ))
    ),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total No of meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>