force-app/main/default/objects/Activity/fields/Verified_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Verified_Meeting__c</fullName>
    <label>CC Verified Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meeting Verified</fullName>
                <color>#CC33CC</color>
                <label>Meeting Verified</label>
            </value>
            <value>
                <fullName>Verification Failed</fullName>
                <color>#FF6600</color>
                <label>Verification Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>