force-app/main/default/objects/Activity/fields/ziwo__Call_Cause__c.field-meta.xml
<CustomField>
    <fullName>ziwo__Call_Cause__c</fullName>
    <label>Call Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>