force-app/main/default/objects/Activity/fields/ziwo__Call_Hangup_By__c.field-meta.xml
<CustomField>
    <fullName>ziwo__Call_Hangup_By__c</fullName>
    <label>Call Hangup By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>