force-app/main/default/objects/Activity/fields/ziwo__Call_ID__c.field-meta.xml
<CustomField>
    <fullName>ziwo__Call_ID__c</fullName>
    <label>Call ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>