force-app/main/default/objects/Activity/fields/ziwo__Call_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>ziwo__Call_Recording_URL__c</fullName>
    <label>Call Recording URL</label>
    <type>Url</type>
</CustomField>