force-app/main/default/objects/Activity/fields/ziwo__Call_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ziwo__Call_Start_Date_Time__c</fullName>
    <label>Call Start Date/Time</label>
    <type>DateTime</type>
</CustomField>