force-app/main/default/objects/Activity/fields/ziwo__CallDurationInSeconds__c.field-meta.xml
<CustomField>
    <fullName>ziwo__CallDurationInSeconds__c</fullName>
    <label>CallDurationInSeconds</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>