force-app/main/default/objects/Activity/fields/ziwo__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ziwo__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>