force-app/main/default/objects/Activity/listViews/Completedthisweek.listView-meta.xml
<ListView>
    <fullName>Completedthisweek</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>My Completed this week</label>
    <language>en_US</language>
</ListView>